--- a/dorf.css
+++ b/dorf.css
@@ -1,14 +1,32 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+input,
+label {
+    display: block;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+label {
+    font-size: small;
+}
+
 .dorf {
-  background-color: #2C2F33;
-  padding: 2rem;
+    background-color: #2c2f33;
+    padding: 2rem;
+    color: white;
+    font-family: 'Open Sans', serif;
 }
 
 .dorf__logo {
-  width: 350px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 1rem;
+    width: 350px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1rem;
 }
 
 .dorf__button {
@@ -20,6 +38,39 @@
     border-radius: 5px;
 }
 
-.dorf_button:hover {
+.dorf__button:hover {
     background-color: rgb(31, 33, 34);
+}
+
+.dorf__ports-container {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.dorf__port-label {
+    width: 80px;
+}
+
+.dorf__port-input {
+    color: white;
+    background-color: rgb(24, 26, 27);
+    border-radius: 5px;
+    padding: 8px;
+    margin: 8px;
+    margin-left: 0;
+    border: none;
+    border-bottom: 1px solid rgb(56, 56, 56);
+    width: 50px;
+}
+
+.dorf__container {
+    display: flex;
+}
+
+.dorf__configuration {
+    width: 40%;
+}
+
+.dorf__plot {
+    width: 60%;
 }
